--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "prod": "npm run build && npm run start"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.2.8",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
     "@googlemaps/js-api-loader": "^1.14.3",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/typescript-guards": "^2.0.2",
+    "@next/bundle-analyzer": "^12.2.5",
+    "@reach/combobox": "^0.17.0",
     "fast-equals": "^4.0.1",
     "framer-motion": "^6.5.1",
     "next": "12.2.5",
@@ -28,8 +27,11 @@
     "@types/node": "18.7.10",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
