--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@vercel/analytics": "^0.1.6",
     "fast-equals": "^4.0.1",
     "framer-motion": "^6.5.1",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
@@ -29,7 +29,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.1.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
