--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/typescript-guards": "^2.0.2",
     "@next/bundle-analyzer": "^12.2.5",
     "@vercel/analytics": "^0.1.6",
+    "axios": "^1.2.2",
     "fast-equals": "^4.0.1",
     "framer-motion": "^6.5.1",
     "next": "^13.1.1",
