--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"next": "^13.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0"
+		"react-icons": "^4.4.0",
+		"react-query": "^3.39.2"
 	},
 	"devDependencies": {
 		"@types/google.maps": "^3.51.0",
