--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"@googlemaps/react-wrapper": "^1.1.35",
 		"@googlemaps/typescript-guards": "^2.0.2",
 		"@next/bundle-analyzer": "^12.2.5",
+		"@tanstack/react-query": "^4.22.0",
+		"@tanstack/react-query-devtools": "^4.22.0",
 		"@vercel/analytics": "^0.1.8",
 		"axios": "^1.2.2",
 		"fast-equals": "^4.0.1",
@@ -21,8 +23,7 @@
 		"next": "^13.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.4.0",
-		"react-query": "^3.39.2"
+		"react-icons": "^4.4.0"
 	},
 	"devDependencies": {
 		"@types/google.maps": "^3.51.0",
